--- a/style/style.css
+++ b/style/style.css
@@ -11,7 +11,8 @@ html {
 
 body {
   font-family: 'Josefin Sans', sans-serif !important;
-  background: #d3d3d3 !important;
+  background: url(http://i.imgur.com/S7uCPGZ.jpg) center center no-repeat !important;
+  background-size: cover !important;
   position: relative;
   margin: 0;
   padding-bottom: 16rem;
