--- a/style/style.css
+++ b/style/style.css
@@ -11,7 +11,7 @@ html {
 
 body {
   font-family: 'Josefin Sans', sans-serif !important;
-  background: url(http://pldh.net/media/gallery/the493/stantler.jpg) center center no-repeat !important;
+  background: url(http://i12.photobucket.com/albums/a248/gouldie07/newbg_zps1zrgxgbq.jpg) center center no-repeat !important;
   background-size: cover !important;
   position: relative;
   margin: 0;
