--- a/style/style.css
+++ b/style/style.css
@@ -11,7 +11,7 @@ html {
 
 body {
   font-family: 'Josefin Sans', sans-serif !important;
-  background: url(http://i.imgur.com/sJBVvbc.jpg) center center no-repeat !important;
+  background: url(https://i.imgur.com/sJBVvbc.jpg) center center no-repeat !important;
   background-size: cover !important;
   position: relative;
   margin: 0;
