--- a/style/style.css
+++ b/style/style.css
@@ -192,3 +192,9 @@ input[type=range]:focus::-ms-fill-lower {
 input[type=range]:focus::-ms-fill-upper {
   background: #367ebd;
 }
+
+@media (min-width: 768px) {
+  .form-horizontal {
+    margin-left: 30% !important;
+  }
+}
