--- a/style/style.css
+++ b/style/style.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  font-family: 'Josefin Sans', sans-serif !important;
+  font-family: 'Raleway', sans-serif !important;
   background: url(https://i.imgur.com/sJBVvbc.jpg) center center no-repeat !important;
   background-size: cover !important;
   position: relative;
