updated with pre-halloween event exp

--- a/style/style.css
+++ b/style/style.css
@@ -11,7 +11,7 @@ html {
 
 body {
   font-family: 'Raleway', sans-serif !important;
-  background: url(https://i.imgur.com/sJBVvbc.jpg) center center no-repeat !important;
+  background: url(https://pldh.net/media/gallery/the493/banette.jpg) center center no-repeat !important;
   background-size: cover !important;
   position: relative;
   margin: 0;
