--- a/style/style.css
+++ b/style/style.css
@@ -11,13 +11,16 @@ html {
 
 body {
   font-family: 'Raleway', sans-serif !important;
-  background: url(https://pre00.deviantart.net/006a/th/pre/f/2017/017/5/6/spheal_wallpaper_1920_x_1080_by_ergoprime-davts2u.jpg) center center no-repeat !important;
+  background: url(https://pre00.deviantart.net/006a/th/pre/f/2017/017/5/6/spheal_wallpaper_1920_x_1080_by_ergoprime-davts2u.jpg) center center repeat !important;
   background-size: cover !important;
   position: relative;
   margin: 0;
-  padding-bottom: 16rem;
+  padding-bottom: 25px;
   min-height: 100%;
   min-width: 750px;
+}
+.form-group {
+  margin-bottom: 0 !important;
 }
 
 .footer {
